<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PlaySudoku">

    <TextView
        android:id="@+id/PlayGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GLHF"
        android:layout_marginBottom="15dp"
        android:textSize="24sp"
        custom:layout_constraintBottom_toTopOf="@+id/PlaySudokuGrid"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent" />

    <com.example.sudoku.SudokuGrid
        android:id="@+id/PlaySudokuGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.300">

    </com.example.sudoku.SudokuGrid>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintTop_toBottomOf="@+id/PlaySudokuGrid">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonOnePressed"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button2"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonTwoPressed"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button3"
            custom:layout_constraintStart_toEndOf="@+id/button1"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonThreePressed"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button4"
            custom:layout_constraintStart_toEndOf="@+id/button2"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonFourPressed"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button5"
            custom:layout_constraintStart_toEndOf="@+id/button3"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonFivePressed"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button6"
            custom:layout_constraintStart_toEndOf="@+id/button4"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonSixPressed"
            android:text="6"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button7"
            custom:layout_constraintStart_toEndOf="@id/button5"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonSevenPressed"
            android:text="7"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button8"
            custom:layout_constraintStart_toEndOf="@id/button6"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonEightPressed"
            android:text="8"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/button9"
            custom:layout_constraintStart_toEndOf="@+id/button7"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="ButtonNinePressed"
            android:text="9"
            android:textColor="@color/black"
            android:textSize="24sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toEndOf="@+id/button8"
            custom:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/SolveButtonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/Solve"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/HintButtonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/Hint"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>